Improving my site

--- a/Tienda/Tienda/Views/Countries/Details.cshtml
+++ b/Tienda/Tienda/Views/Countries/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Tienda.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalle";
 }
 
-<h1>Details</h1>
+<h1>Detalle</h1>
 
 <div>
-    <h4>Country</h4>
+    <h4>País</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -16,9 +16,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-outline-warning">Editar</a> 
+    <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
 </div>
