--- a/Tienda/Tienda/Views/Countries/Delete.cshtml
+++ b/Tienda/Tienda/Views/Countries/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Tienda.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Borrar";
 }
 
-<h1>Delete</h1>
+<h1>Borrar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro de que desea eliminar esto?</h3>
 <div>
-    <h4>Country</h4>
+    <h4>País</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Borrar" class="btn btn-outline-danger" />
+        <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
     </form>
 </div>
