--- a/Tienda/Tienda/Views/Countries/Edit.cshtml
+++ b/Tienda/Tienda/Views/Countries/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Tienda.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Country</h4>
+<h4>País</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,16 +18,15 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <br/>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
