--- a/Tienda/Tienda/Views/Countries/Delete.cshtml
+++ b/Tienda/Tienda/Views/Countries/Delete.cshtml
@@ -8,17 +8,7 @@
 
 <h3>¿Está seguro de que desea eliminar esto?</h3>
 <div>
-    <h4>País</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-    
+    <partial name = "_CountryDetails"/>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-outline-danger" />
