--- a/Tienda/Tienda/Views/Countries/Edit.cshtml
+++ b/Tienda/Tienda/Views/Countries/Edit.cshtml
@@ -13,14 +13,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <br/>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <partial name = "_Country"/>
+            <div class="form-group mt-1">
+                <input type="submit" value="Guardar" class="btn btn-outline-primary" />
                 <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
