--- a/Tienda/Tienda/Views/Countries/Index.cshtml
+++ b/Tienda/Tienda/Views/Countries/Index.cshtml
@@ -23,6 +23,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StatesNumber)
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -32,6 +35,9 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StatesNumber)
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
@@ -61,8 +67,8 @@
                     "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
                 },
                 "aLengthMenu": [
-                    [5, 25, 50, 100, 200, -1],
-                    [5, 25, 50, 100, 200, "Todos"]
+                    [ 25, 50, 100, 200, -1],
+                    [ 25, 50, 100, 200, "Todos"]
                 ]
             });
         });
