--- a/Tienda/Tienda/Views/Countries/_CountryDetails.cshtml
+++ b/Tienda/Tienda/Views/Countries/_CountryDetails.cshtml
@@ -9,5 +9,13 @@
     <dd class = "col-sm-10">
         @Html.DisplayFor(model => model.Name)
     </dd>
+
+    <dt class = "col-sm-2">
+        @Html.DisplayNameFor(model => model.StatesNumber)
+    </dt>
+    <dd class = "col-sm-10">
+        @Html.DisplayFor(model => model.StatesNumber)
+    </dd>
+
 </dl>
     
